# gen3_xr_teleop_ros_vision

./: CMakeLists.txt  README.md  package.xml
config/: teleop_config.yaml
include/: Gen3RobotController.h
kortex_api/include/client/: NotificationHandler.h
kortex_api/include/client_stubs/: BaseClientRpc.h
kortex_api/include/common/: Frame.h  version.h
kortex_api/include/messages/: Base.pb.h  ProductConfiguration.pb.h
launch/: gen3_xr_teleop.launch.py
rviz/: rviz.rviz
scripts/: data_convert_to_lerobot.py  xr_publisher_node.py
src/: Gen3RobotController.cpp  gen3_xr_teleop_ros.cpp  gen3_xr_teleop_ros1.cpp
