<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gen3_xr_teleop</name>
  <version>1.0.0</version>
  <description>Gen3 robot XR teleoperation using ROS2</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ / ROS 依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>trac_ik_lib</depend>
  <depend>tf2_ros</depend>
  <depend>snesor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python XR 发布器 -->
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
